logs/munin-plugins.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/munin_plugins'...
Listing './lib/python3.5/site-packages/munin_plugins/checks'...
Compiling './lib/python3.5/site-packages/munin_plugins/generate.py'...
***   File "./lib/python3.5/site-packages/munin_plugins/generate.py", line 54
    print "ERROR: %s"%msg
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/munin_plugins/plugins'...
Compiling './lib/python3.5/site-packages/munin_plugins/plugins/plugin.py'...
***   File "./lib/python3.5/site-packages/munin_plugins/plugins/plugin.py", line 173
    print row%(id,k,v)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/munin_plugins/plugins/processes_analyzers'...
Compiling './lib/python3.5/site-packages/munin_plugins/plugins/snsr_apache.py'...
***   File "./lib/python3.5/site-packages/munin_plugins/plugins/snsr_apache.py", line 170
    print "multigraph apache_%s"%(cl.id)
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/munin_plugins/plugins/snsr_errfiles.py'...
***   File "./lib/python3.5/site-packages/munin_plugins/plugins/snsr_errfiles.py", line 73
    print "graph_title %s"%self.getenv('title')
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/munin_plugins/plugins/snsr_monit.py'...
***   File "./lib/python3.5/site-packages/munin_plugins/plugins/snsr_monit.py", line 99
    print "graph_title %s"%self.getenv('title')
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/munin_plugins/plugins/snsr_nginx.py'...
***   File "./lib/python3.5/site-packages/munin_plugins/plugins/snsr_nginx.py", line 176
    print "multigraph nginx_%s"%(cl.id)
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/munin_plugins/plugins/snsr_processes.py'...
***   File "./lib/python3.5/site-packages/munin_plugins/plugins/snsr_processes.py", line 80
    print "multigraph processes_%s"%cl.__name__
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/munin_plugins/plugins/snsr_repmgr.py'...
***   File "./lib/python3.5/site-packages/munin_plugins/plugins/snsr_repmgr.py", line 44
    print 'graph_title %s' % self.getenv('title')
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/munin_plugins/plugins/www_analyzers'...
Compiling './lib/python3.5/site-packages/munin_plugins/plugins/www_analyzers/base.py'...
***   File "./lib/python3.5/site-packages/munin_plugins/plugins/www_analyzers/base.py", line 55
    print "graph_title %s %s" % (main_title,self.getenv('subtitle'))
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/munin_plugins/utils'...
Listing './lib/python3.5/site-packages/munin_plugins-5.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil-2.2.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
